with components & css

--- a/client/src/app/menu/row/row-item/row-item.component.html
+++ b/client/src/app/menu/row/row-item/row-item.component.html
@@ -1,3 +1,15 @@
-<p>
-  row-item works!
-</p>
+<div class="movie">
+        <img src="https://image.tmdb.org/t/p/w300{{movie.poster_path}}" alt="">    
+
+    <div class="backround-title">
+        <div class="title">
+                <h1>{{movie.title}}</h1>
+                <h2>Date de sortie :{{movie.release_date}}</h2>
+                <h2>Description</h2>
+                <p>{{movie.overview}}</p>
+        </div>
+        
+        
+    </div>
+    
+</div>
