--- a/client/src/app/menu/menu.component.html
+++ b/client/src/app/menu/menu.component.html
@@ -1,6 +1,3 @@
-<h1>Liste de films</h1>
-<ul>
-  <li>
-      <app-menu-item *ngFor="let movie of catalogue" [movie]="movie"></app-menu-item>
-  </li>
-</ul>
+<h1>Catalogue de {{count}} films</h1>
+      <app-row *ngFor="let row of rows" [row]="row"></app-row>
+ 
