--- a/client/src/app/menu/row/row-item/row-item.component.css
+++ b/client/src/app/menu/row/row-item/row-item.component.css
@@ -9,37 +9,6 @@
     overflow: hidden;
 }
 
-@media only screen and (max-width: 1400px) {
-  .movie{
-
-    float: left;
-    width:300px;
-    height: 450px;;
-    position: relative;
-    cursor: pointer;
-    margin: 0;
-    overflow: hidden;
-    margin:20px;
-    margin-right:100px;
-    /* margin-bottom: 10px; */
-   }
-}
-
-@media only screen and (max-width: 800px) {
-  .movie{
-
-    float: left;
-    width:300px;
-    height: 450px;;
-    position: relative;
-    cursor: pointer;
-    margin: 0;
-    overflow: hidden;
-    /* margin-bottom: 10px; */
-  }
-}
-
-
 .movie:hover img{
     width: 120%;
     transform: translate(-10%,-10%);
@@ -59,6 +28,40 @@
     /* z-index: -10000;   */
     padding: 20px;
 
+}
+@media only screen and (max-width: 1400px) {
+  .movie{
+
+    float: left;
+    width:300px;
+    height: 450px;;
+    position: relative;
+    cursor: pointer;
+    margin: 0;
+    overflow: hidden;
+    margin:20px;
+    margin-right:100px;
+   }
+   .backround-title{
+    display: block;
+  }
+}
+
+
+@media only screen and (max-width: 800px) {
+  .movie{
+
+    float: left;
+    width:300px;
+    height: 450px;;
+    position: relative;
+    cursor: pointer;
+    margin: 0;
+    overflow: hidden;
+  }
+  .backround-title{
+    display: block;
+  }
 }
 
 .title{
