with css of details movie page

--- a/client/src/app/menu/row/row-item/row-item.component.html
+++ b/client/src/app/menu/row/row-item/row-item.component.html
@@ -1,3 +1,4 @@
+<a href="http://localhost:4200/movies/{{movie.id}}">
 <div class="movie">
         <img src="https://image.tmdb.org/t/p/w300{{movie.poster_path}}" alt="">    
 
@@ -13,3 +14,4 @@
     </div>
     
 </div>
+</a>
